--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -2,27 +2,49 @@
     text-align: center;
 }
 
-.badge{
-    width: 6rem;
+/*.badge{*/
+/*    width: 6rem;*/
+/*}*/
+
+/*.tablePanel{*/
+/*    margin-right: 1%;*/
+/*    margin-left: 1%;*/
+/*}*/
+
+/*.pagination{*/
+/*    margin-top: 0.5rem;*/
+/*}*/
+
+/*.page-arrow{*/
+/*    padding-bottom: 0.1rem;*/
+/*    padding-top: 0.1rem;*/
+/*}*/
+
+/*.table{*/
+/*    font-family: Poppins,sans-serif;*/
+/*    font-size: .875rem;*/
+/*    font-weight: 400;*/
+/*    line-height: 1.5;*/
+/*}*/
+
+.my-custom-scrollbar {
+    position: relative;
+    overflow: auto;
+}
+.table-wrapper-scroll-y {
+    display: block;
 }
 
-.tablePanel{
-    margin-right: 1%;
-    margin-left: 1%;
+::-webkit-scrollbar {
+    width: 12px;
 }
 
-.pagination{
-    margin-top: 0.5rem;
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
 }
 
-.page-arrow{
-    padding-bottom: 0.1rem;
-    padding-top: 0.1rem;
-}
-
-.table{
-    font-family: Poppins,sans-serif;
-    font-size: .875rem;
-    font-weight: 400;
-    line-height: 1.5;
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
 }
