--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -2,6 +2,22 @@
     text-align: center;
 }
 
+.bg-image {
+    /* The image used */
+    background-image: url('../../img/header.jpg');
+
+    /* Full height */
+    height: 100vh;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.card-login{
+    padding: 40px 40px 20px;
+}
 /*.badge{*/
 /*    width: 6rem;*/
 /*}*/
