--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -15,9 +15,30 @@
     background-size: cover;
 }
 
+.bg-image-main {
+    /* The image used */
+    background-image: url('../../img/background2.jpg');
+
+    /* Full height */
+    height: 100vh;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.content-user{
+    padding-top: 78px;
+    padding-bottom: 78px;
+    min-height: calc(100vh - 70px);
+}
+
 .card-login{
     padding: 40px 40px 20px;
 }
+
+
 /*.badge{*/
 /*    width: 6rem;*/
 /*}*/
@@ -76,4 +97,61 @@ table{
 
 .sidebar{
     font-size: 0.75rem;
+}
+
+.modal{
+    background:rgba(0,0,0,.7);
+}
+
+
+/*
+*/
+
+.btn-one {
+    color: #FFF;
+    transition: all 0.3s;
+    position: relative;
+}
+.btn-one span {
+    transition: all 0.3s;
+}
+.btn-one::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    /*border-top-width: 1px;*/
+    /*border-bottom-width: 1px;*/
+    /*border-top-style: solid;*/
+    /*border-bottom-style: solid;*/
+    /*border-top-color: rgba(255,255,255,0.5);*/
+    /*border-bottom-color: rgba(255,255,255,0.5);*/
+    transform: scale(0.1, 1);
+}
+.btn-one:hover span {
+    letter-spacing: 2px;
+}
+.btn-one:hover::before {
+    opacity: 1;
+    transform: scale(1, 1);
+}
+.btn-one::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    transition: all 0.3s;
+    background-color: rgba(255,255,255,0.1);
+}
+.btn-one:hover::after {
+    opacity: 0;
+    transform: scale(0.1, 1);
 }
