--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -1,4 +1,4 @@
-.logo-normal{
+.logo-normal {
     text-align: center;
 }
 
@@ -28,45 +28,20 @@
     background-size: cover;
 }
 
-.content-user{
+.content-user {
     padding-top: 78px;
     min-height: calc(100vh - 70px);
 }
 
-.card-login{
+.card-login {
     padding: 40px 40px 20px;
 }
-
-
-/*.badge{*/
-/*    width: 6rem;*/
-/*}*/
-
-/*.tablePanel{*/
-/*    margin-right: 1%;*/
-/*    margin-left: 1%;*/
-/*}*/
-
-/*.pagination{*/
-/*    margin-top: 0.5rem;*/
-/*}*/
-
-/*.page-arrow{*/
-/*    padding-bottom: 0.1rem;*/
-/*    padding-top: 0.1rem;*/
-/*}*/
-
-/*.table{*/
-/*    font-family: Poppins,sans-serif;*/
-/*    font-size: .875rem;*/
-/*    font-weight: 400;*/
-/*    line-height: 1.5;*/
-/*}*/
 
 .my-custom-scrollbar {
     position: relative;
     overflow: auto;
 }
+
 .table-wrapper-scroll-y {
     display: block;
 }
@@ -76,48 +51,64 @@
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
-option{
+option {
     color: #9A9A9A;
     background: white;
 }
 
-table{
+table {
     font-size: 0.875rem;
 }
 
-.sidebar{
-    font-size: 0.75rem;
+.modal {
+    background: rgba(0, 0, 0, .7);
 }
 
-.modal{
-    background:rgba(0,0,0,.7);
-}
-
-.footer{
+.footer {
     padding: 24px 0px 24px 24px;
 }
 
 
-/*
-*/
+.sidebar {
+    font-size: 0.75rem;
+    background: linear-gradient(
+            0deg, #00f2c3 0%, #ba54f5 100%);
+}
+
+.btn span {
+    display: inline-block;
+}
+
+.dark-list-item {
+    background-color: transparent;
+    border: 0.0625rem solid rgba(255, 255, 255, .1);
+}
+
+.list-group-border{
+    border-bottom: 0.0625rem;
+}
+
+/*Button style*/
 
 .btn-one {
     color: #FFF;
     transition: all 0.3s;
     position: relative;
 }
+
 .btn-one span {
     transition: all 0.3s;
 }
+
 .btn-one::before {
     content: '';
     position: absolute;
@@ -128,21 +119,18 @@ table{
     z-index: 1;
     opacity: 0;
     transition: all 0.3s;
-    /*border-top-width: 1px;*/
-    /*border-bottom-width: 1px;*/
-    /*border-top-style: solid;*/
-    /*border-bottom-style: solid;*/
-    /*border-top-color: rgba(255,255,255,0.5);*/
-    /*border-bottom-color: rgba(255,255,255,0.5);*/
     transform: scale(0.1, 1);
 }
+
 .btn-one:hover span {
     letter-spacing: 2px;
 }
+
 .btn-one:hover::before {
     opacity: 1;
     transform: scale(1, 1);
 }
+
 .btn-one::after {
     content: '';
     position: absolute;
@@ -152,18 +140,20 @@ table{
     height: 100%;
     z-index: 1;
     transition: all 0.3s;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255, 255, 255, 0.1);
 }
+
 .btn-one:hover::after {
     opacity: 0;
     transform: scale(0.1, 1);
 }
 
-.sidebar{
-    background: linear-gradient(
-            0deg, #00f2c3 0%, #ba54f5 100%);
+.btn-white:hover{
+    color: #ff8d72;
 }
 
-.btn span{
-    display: inline-block;
+.btn-white:active{
+    color: #ff8d72;
 }
+
+/*Tnd button style*/
