--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -17,7 +17,7 @@
 
 .bg-image-main {
     /* The image used */
-    background-image: url('../../img/background2.jpg');
+    background-image: url('../../img/bg_dark.jpg');
 
     /* Full height */
     height: 100vh;
