--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -108,6 +108,10 @@ table {
     border-bottom: 0.0625rem;
 }
 
+body .content label{
+    font-size: 0.8rem;
+}
+
 .nav-tabs {
     border-bottom: 0.0625rem solid rgba(255, 255, 255, .1);
 }
