order list pagination

--- a/src/main/webapp/resources/css/custom/custom.css
+++ b/src/main/webapp/resources/css/custom/custom.css
@@ -242,3 +242,8 @@ a, .btn {
 .table>tbody>tr>.text-danger{
     color: #fd5d93 !important;
 }
+
+.page-link{
+    border: 0.0625rem solid #393e4b;
+    color: #ba54f5;
+}
